# DARK-CALENDAR

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  AppxManifest.xml  CLAUDE.md  CUsersaplusAppDataLocalTempclaudeD-------Dark-Calendar1c675b89-aab2-4b4e-91da-ca8a9d8d73c8scratchpadtranslate_all.py  DarkCalendar.spec  README.md  SOURCE_OFFER.md  Standalone.spec  TASKS.md  THIRD_PARTY_NOTICES.md  build-core.ps1  build-release.bat  build-store-release.ps1  build.ps1  build_store.py  bundle-msix.ps1  desk_calendar_default.db  main.py  main.spec  make-store-upload.ps1  package_msix.py  patch_detail_test.py  prepare-store-release.bat  prepare-store-release.ps1  pyproject.toml  pytest.ini  release-compliance.json  requirements-dev.txt  requirements.txt  run.bat  version_info.txt
Assets/: app_icon.icns
calendar_app/: __init__.py  app_metadata.py  app_paths.py  bootstrap.py  preset_manager.py
docs/: app.js  google-oauth-verification-guide.md  homepage_content.json  index.html  legacy-encoding-guideline.md  microsoft-store-gpl-release.md  panel_widget_mode_split_plan.md  privacy-policy.en.md  privacy-policy.ko.md  privacy.html  release-3.6.1-checklist.md  site-config.json  store_release_process.md  styles.css  theme_token_completion_process.md
locales/: ar.json  de.json  en.json  es.json  fr.json  hi.json  id.json  it.json  ja.json  ko.json  nl.json  pt.json  ru.json  th.json  tr.json  vi.json  zh-CN.json  zh-TW.json  zh.json
memory/: widget_mode_redesign.md
rules/: architecture.md  database.md  duplication_consolidation_plan.md  encoding.md  gcal_sync.md  i18n.md  overlay_widgets.md  panel_selection.md  store_release_process.md  task_dialog.md  template_engine.md
scripts/: build_pipeline.ps1  check_encoding.py  fix_encoding.py  gcal_dedupe.py  generate_icons.py  i18n_sync.py  release_compliance.py  reset_release_state.py  run_encoding_guard.py  run_quality_gate.py  translate_locales.py
tests/: support.py  test_alarm_popup.py  test_alarm_popup_sound.py  test_app_metadata.py  test_away_lock.py  test_background_worker_helpers.py  test_build_pipeline_contracts.py  test_build_store.py  test_calendar_render_regressions.py  test_checklist_repository.py  test_command_palette.py  test_db_query_optimizations.py  test_db_repository_hooks.py  test_dialog_editor_widgets.py  test_dialog_router.py  test_dialog_token_color_presets.py  test_directive_management_usecases.py  test_directive_schema_compat.py  test_dock_layout_presets.py  test_domain_i18n_adapter.py  test_encoding_guard.py  test_encoding_policy.py  test_encoding_utils.py  test_eod_usecases.py  test_exit_confirmation_dialog.py  test_floating_dock_behavior.py  test_focus_completion_dialog.py  test_focus_mode.py  test_focus_usecases.py  test_gcal_dedupe_script.py  test_gcal_remote_mirror_visibility.py  test_gcal_startup_ux.py  test_gcal_sync_helpers.py  test_gcal_sync_integration.py  test_gcal_sync_issues_dialog.py  test_help_center_dialog.py  test_i18n_runtime_support.py  test_i18n_sync.py  (+49 more)
(+216 files in other folders)
